[project]
name = "ezmsg-blackrock"
description = "Blackrock Cerebus ecosystem interface for ezmsg"
authors = [
  { name = "Griffin Milsap", email = "chadwick.boulay@gmail.com" },
  { name = "Chadwick Boulay", email = "chadwick.boulay@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
    "ezmsg-event",
    "ezmsg>=3.6.1",
    "pycbsdk>=0.3.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.3",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/ezmsg/blackrock/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ezmsg"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.8",
    "typer>=0.12.5",
]
