[metadata]
name = ezmsg-blackrock
version = attr: ezmsg.blackrock.__version__
author = Griffin Milsap
author_email = griffin.milsap@jhuapl.edu
description = Blackrock Cerebus ecosystem interface for ezmsg
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/griffinmilsap/ezmsg-blackrock
license_files = LICENSE.txt
classifiers = 
	Programming Language :: Python :: 3
	Operating System :: OS Independent

[options]
packages = find_namespace:
python_requires = >=3.8
install_requires = 
    pycbsdk
    ezmsg>=2.1.0
    ezmsg-sigproc>=1.1.0

[options.extras_require]
test =
    pytest
    pytest-cov

